--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
         }
     ],
     "require": {
-        "php": "^8.0",
-        "illuminate/support": "^9.0",
-        "infyomlabs/laravel-generator-helpers": "^4.0",
-        "laravel/ui": "^3.0"
+        "php": "^8.0 | ^ 8.1 | ^8.2",
+        "illuminate/support": "^9.0 | ^10.0",
+        "infyomlabs/laravel-generator-helpers": "^4.0 | ^5.0",
+        "laravel/ui": "^3.0 | ^4.0"
     },
     "autoload": {
         "psr-4": {
